# HumanAI-Project

./: .gitignore  README.md  app.py  config.py  explaination_generator.py  hello.py  index.html  mcq_generator.py  ollama_chatv13.py  ollama_chatv15.py  ollama_chatv2.py  ollama_chatv35  ollama_chatv35.py  ollama_chatv5.py  ollama_chatv7.py  ollama_client.py  ollama_updated.py  package.json  pdf_parser.py  pyproject.toml  quiz_flow.py  script.js  styles.css  summary_generator.py  user_session.py
Research Paper Assisteant System/: ReadME.txt  custom_css.py  main_app_fixed.py  mcq_generator.py  ollama_api.py  ollama_chatv35_modular_enhanced.py  package.json  pdf_parser_fix.py  quiz_questions.py  section_extractor.py  theme.json
legacy_versions/: ollama_chatv13.py  ollama_chatv2.py  ollama_chatv3.py  ollama_chatv35.py  ollama_chatv5.py  ollama_chatv6.py  ollama_chatv7.py  ollama_updated.py
ollama_chat_legacy/: modified_ollama_chatv19.py  ollama_chatv13.py  ollama_chatv3.py  ollama_chatv35.py  ollama_chatv6.py  ollama_updated.py
ollama_chat_refactor/: diagram_generator_enhanced.py  diagram_generator_fixed.py  main_app_fixed.py  mcq_generator.py  ollama_chatv35_modular_enhanced.py  pdf_parser.py  section_extractor.py
static/: styles.css
