[project]
name = "humanai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0.0",
    "gradio>=5.22.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.5",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
]
